# minecraft-clone

./: Cargo.toml
src/: block.rs  block_types.rs  camera.rs  chunk.rs  chunk_manager.rs  direction.rs  main.rs  math.rs  quad.rs  raycaster.rs  shader.wgsl  texture.rs  vertex.rs
src/assets/: blocks.toml
src/assets/blocks/: air.toml  cobblestone.toml  dirt.toml  grass.toml  stone.toml
src/assets/shaders/: shader.wgsl
src/render/: chunk_buffers.rs  chunk_builder.rs  mod.rs  quad.rs  sky.rs  sky_builder.rs  texture.rs
