[package]
name = "mc"
version = "0.1.0"
authors = ["SimplyCmd <simplycmd00@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
image = "0.23"
wgpu = "0.12"
winit = "0.26"
once_cell = "1.4"
toml = "0.5"
strum = "0.23"
strum_macros = "0.23"
rand = "0.8"
try-catch = "0.2"
serde = "1.0"
serde_derive = "1.0"
noise = "0.7"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"