[package]
name = "minecraft_clone"
version = "0.2.0"
authors = ["SimplyCmd <simplycmd00@gmail.com>"]
edition = "2021"

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
simple_logger = "4.0"
log = "0.4"
pollster = "0.2"
image = "0.24"
wgpu = "0.14"
winit = "0.27"
once_cell = "1.4"
toml = "0.5"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
noise = "0.8"